--- a/assets/login.html
+++ b/assets/login.html
@@ -4,11 +4,13 @@
     <link rel="stylesheet" href="css/app.css">
     <!-- Material Design Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Page script -->
+    <script src="ts_compiled/login.js"></script>
   </head>
   <body class="light-grey">
     <div class="flexbox-column--align" style="min-height: 90vh;">
       <h1 class="h-centred" style="margin: 0%; margin-left: 4.5%;">Alcolator</h1>
-      <h3 class="h-centred" style="margin-top: 0%; margin-left: 4.5%;">Login</h3>
+      <h3 class="h-centred" style="margin-top: 0%; margin-left: 4.5%; margin-top: 0.5%;">Login</h3>
       <!-- Username input -->
       <div class="flexbox-row--align margin-b--10px">
         <i class="material-icons margin-lr--10px default">account_circle</i>
@@ -17,12 +19,11 @@
       <!-- Password input -->
       <div class="flexbox-row--align margin-tb--10px">
         <i class="material-icons margin-lr--10px default">lock</i>
-        <input class="light-grey border--black regular long" type="text" id="username">
+        <input class="light-grey border--black regular long" type="password" id="password">
       </div>
-      <div class="flexbox-row" style="width: 37.5%; justify-content: flex-end;">
+      <div class="flexbox-row margin-tb--10px" style="width: 37.5%; justify-content: flex-end; z-index: 500;">
         <button class="normal red white--text">Login</button>
       </div>
     </div>
   </body>
-  <script src="ts_compiled/main.js"></script>
 </html>
