some changes to cursors, etc.

--- a/assets/login.html
+++ b/assets/login.html
@@ -8,7 +8,7 @@
     <script src="ts_compiled/login.js"></script>
   </head>
   <body class="light-grey">
-    <div class="flexbox-column--align" style="min-height: 90vh;">
+    <div class="flexbox-column--align" style="min-height: 95vh;">
       <h1 class="h-centred" style="margin: 0%; margin-left: 4.5%;">Alcolator</h1>
       <h3 class="h-centred" style="margin-top: 0%; margin-left: 4.5%; margin-top: 0.5%;">Login</h3>
       <!-- Username input -->
@@ -21,8 +21,8 @@
         <i class="material-icons margin-lr--10px default">lock</i>
         <input class="light-grey border--black regular long" type="password" id="password">
       </div>
-      <div class="flexbox-row margin-tb--10px" style="width: 37.5%; justify-content: flex-end; z-index: 500;">
-        <button class="normal red white--text">Login</button>
+      <div class="flexbox-row margin-tb--10px" style="width: 37.5%; justify-content: flex-end;;">
+        <button class="normal red white--text selectable">Login</button>
       </div>
     </div>
   </body>
