--- a/assets/main.html
+++ b/assets/main.html
@@ -7,13 +7,13 @@
   </head>
   <body>
       <div class="nav dark-grey white--text">
-          <a class="nav-item">File</a>
-          <img src="img/nav_separator.svg" class="nav-item">
-          <a class="nav-item">Settings</a>
-          <h4 class="yellow--text nav-item--push"><strong>Alcolator</strong></h4>
-          <img src="img/nav_separator.svg" class="nav-item" style="opacity: 0.2">
-          <i class="material-icons nav-icon nav-item" style="margin-bottom: 6px !important;">minimize</i>
-          <i class="material-icons nav-icon nav-item" style="margin-right: 9px;">close</i>
+          <a class="nav-item selectable--text">File</a>
+          <img src="img/nav_separator.svg" class="nav-item cursor-default">
+          <a class="nav-item selectable--text">Settings</a>
+          <h4 class="yellow--text nav-item--push cursor-default"><strong>Alcolator</strong></h4>
+          <img src="img/nav_separator.svg" class="nav-item cursor-default" style="opacity: 0.2">
+          <i class="material-icons nav-icon nav-item selectable--text" style="margin-bottom: 6px;">minimize</i>
+          <i class="material-icons nav-icon nav-item selectable--text" style="margin-right: 9px;">close</i>
       </div>
       <div class="flexbox-column--list light-grey">
         <table>
