--- a/assets/main.html
+++ b/assets/main.html
@@ -10,26 +10,52 @@
           <a class="nav-item selectable--text">File</a>
           <img src="img/nav_separator.svg" class="nav-item cursor-default">
           <a class="nav-item selectable--text">Settings</a>
-          <h4 class="yellow--text nav-item--push cursor-default"><strong>Alcolator</strong></h4>
+          <h2 class="yellow--text nav-item--push cursor-default"><strong>Alcolator</strong></h2>
           <img src="img/nav_separator.svg" class="nav-item cursor-default" style="opacity: 0.2">
           <i class="material-icons nav-icon nav-item selectable--text" style="margin-bottom: 6px;">minimize</i>
           <i class="material-icons nav-icon nav-item selectable--text" style="margin-right: 9px;">close</i>
       </div>
-      <div class="flexbox-column--list light-grey">
-        <table>
-          <tr>
-            <th class="h-centred" colspan="2">
-              <strong><h2>Records</h2></strong>
-            </th>
-          </tr>
-          <tr>
-            <td class="dark-grey" style="min-height: 74px;" rowspan="2"><i class="material-icons list-icon h-centred">assignment_ind</i></td>
-            <td class="dark-grey" style="min-height: 37px;"><h5>S273</h5></td>
-          </tr>
-          <tr>
-            <td class="dark-grey" style="min-height: 37px;"><h3>30/06/20</h3></td>
-          </tr>
-        </table>
+      <div class="flexbox-row">
+        <div class="flexbox-column--list light-grey">
+          <div class="flexbox-row--align" style="padding-top: 5px;">
+            <strong><h2 style="margin: 0;">Records</h2></strong>
+          </div>
+          
+        </div>
+        <div class="flexbox-column--dat">
+          <div class="flexbox-row" style="height: 63%;">
+            <div class="flexbox-column pad--10px">
+              <strong><h4>New Subject 003</h4></strong>
+              <strong><h3>General Information</h3></strong>
+              <div class="flexbox-row--align margin-b--10px">
+                <h3>Age (years): </h3>
+                <input class="light-grey border--black regular" type="text" id="age">
+              </div>
+            </div>
+            <div class="flexbox-column">
+
+            </div>
+          </div>
+          <div class="flexbox-row light-grey" style="height: 37%;">
+            <strong><h2 style="margin: 5px;">Results</h2></strong>
+            <img src="img/bottle.png" alt="beer bottle" class="nav-item--push" style="align-self: flex-end; margin-bottom: 0; z-index: -100;" width="209px" height="145px">
+          </div>
+        </div>
       </div>
   </body>
 </html>
+
+<!-- <table>
+            <tr>
+              <th class="h-centred" colspan="2">
+                <strong><h2>Records</h2></strong>
+              </th>
+            </tr>
+            <tr>
+              <td class="dark-grey" style="min-height: 74px;" rowspan="2"><i class="material-icons list-icon h-centred">assignment_ind</i></td>
+              <td class="dark-grey" style="min-height: 37px;"><h5>S273</h5></td>
+            </tr>
+            <tr>
+              <td class="dark-grey" style="min-height: 37px;"><h3>30/06/20</h3></td>
+            </tr>
+          </table> -->
