--- a/assets/login.html
+++ b/assets/login.html
@@ -9,6 +9,7 @@
   </head>
   <body class="light-grey">
     <div class="flexbox-column--align" style="min-height: 95vh;">
+      <!-- Title & login labels -->
       <h1 class="h-centred" style="margin: 0%; margin-left: 4.5%;">Alcolator</h1>
       <h3 class="h-centred" style="margin-top: 0%; margin-left: 4.5%; margin-top: 0.5%;">Login</h3>
       <!-- Username input -->
@@ -21,6 +22,7 @@
         <i class="material-icons margin-lr--10px default">lock</i>
         <input class="light-grey border--black regular long" type="password" id="password">
       </div>
+      <!-- Login button -->
       <div class="flexbox-row margin-tb--10px" style="width: 37.5%; justify-content: flex-end;;">
         <button class="normal red white--text selectable">Login</button>
       </div>
