inputs and alignment

--- a/assets/login.html
+++ b/assets/login.html
@@ -11,7 +11,7 @@
     <div class="flexbox-column--align" style="min-height: 95vh;">
       <!-- Title & login labels -->
       <h1 class="h-centred" style="margin: 0%; margin-left: 4.5%;">Alcolator</h1>
-      <h3 class="h-centred" style="margin-top: 0%; margin-left: 4.5%; margin-top: 0.5%;">Login</h3>
+      <h3 class="h-centred" style="margin-top: 0%; margin-left: 4.5%; margin-top: 0.5%;"><strong>Login</strong></h3>
       <!-- Username input -->
       <div class="flexbox-row--align margin-b--10px">
         <i class="material-icons margin-lr--10px default">account_circle</i>
@@ -23,7 +23,7 @@
         <input class="light-grey border--black regular long" type="password" id="password">
       </div>
       <!-- Login button -->
-      <div class="flexbox-row margin-tb--10px" style="width: 37.5%; justify-content: flex-end;;">
+      <div class="flexbox-row margin-tb--10px" style="width: 37.5%; justify-content: flex-end;">
         <button class="normal red white--text selectable">Login</button>
       </div>
     </div>
