removed a top margin value

--- a/assets/main.html
+++ b/assets/main.html
@@ -58,7 +58,7 @@
                 <input class="light-grey border--black regular--dat" type="text" id="age">
               </div>
               <div class="flexbox-row--alignright margin-tb--13px" style="justify-content: flex-end;">
-                <button class="normal red white--text selectable" style="margin-right: 25px; margin-top: 5px;">Calculate</button>
+                <button class="normal red white--text selectable" style="margin-right: 25px;">Calculate</button>
               </div>
             </div> 
           </div>
