Removed typescript (replace with Vue) and began C++

--- a/assets/admin-view.html
+++ b/assets/admin-view.html
@@ -22,7 +22,7 @@
           </div>       
         </div>
         <div class="flexbox-column--dat pad--10px">
-          <strong><h4 style="margin-top: 10px; margin-left: 10px; margin-bottom: 0;">New User Arthur Miller</h4></strong>
+          <strong><h4 style="margin-top: 15px; margin-left: 15px; margin-bottom: 0;">Viewing User Jane Doe</h4></strong>
           <div class="flexbox-row pad--10px" style="height: 63%; padding-bottom: 20px;">
             <div class="flexbox-column" style="width: 50%;">
               <div class="flexbox-row--alignright margin-tb--16px">
