--- a/assets/main_viewmode.html
+++ b/assets/main_viewmode.html
@@ -19,75 +19,61 @@
         <div class="flexbox-column--list light-grey">
           <div class="flexbox-row--align" style="padding-top: 5px;">
             <strong><h2 style="margin: 0;">Records</h2></strong>
-          </div>   
-          <div class="flexbox-row--align margin--dataitem dataitem" style="height: 73px;">
-            <i class="material-icons list-icon" style="width: 20%; margin-right: 20px; margin-left: 5px">assignment_ind</i>
-            <div class="flexbox-column--align">
-              <div class="flexbox-row--alignleft">
-                <h5 class="nomargin" style="text-align: left;">ID: S273</h5>
-              </div>
-              <div class="flexbox-row--alignleft">
-                <h3 class="nomargin" style="text-align: left;">30/06/20</h3>
-              </div>
-            </div>
-          </div>    
-          <div class="flexbox-row--align margin--dataitem dataitem" style="height: 73px;">
-            <i class="material-icons list-icon" style="width: 20%; margin-right: 20px; margin-left: 5px">assignment_ind</i>
-            <div class="flexbox-column--align">
-              <div class="flexbox-row--alignleft">
-                <h5 class="nomargin" style="text-align: left;">ID: S273</h5>
-              </div>
-              <div class="flexbox-row--alignleft">
-                <h3 class="nomargin" style="text-align: left;">30/06/20</h3>
-              </div>
-            </div>
-          </div>
+          </div>       
         </div>
         <div class="flexbox-column--dat pad--10px">
-          <strong><h4 style="margin-top: 15px; margin-left: 15px; margin-bottom: 0;">New Subject 003</h4></strong>
+          <strong><h4 style="margin-top: 15px; margin-left: 15px; margin-bottom: 0;">Viewing Subject 003</h4></strong>
           <div class="flexbox-row pad--10px" style="height: 63%;">
             <div class="flexbox-column" style="width: 50%;">
               <h3 class="margin-tb--10px"><strong>General Information</strong></h3>
               <div class="flexbox-row--alignright margin-tb--13px">
                 <h3 class="margin-input input-label semibold">Age (years): </h3>
-                <input class="light-grey border--black regular--dat" type="text" id="age">
+                <input class="locked-grey border--black regular--dat" type="text" id="age">
+                <i class="material-icons lock">lock</i>
               </div>
               <div class="flexbox-row--alignright margin-tb--13px">
                 <h3 class="margin-input input-label semibold">Gender: </h3>
-                <input class="light-grey border--black regular--dat" type="text" id="gender">
+                <input class="locked-grey border--black regular--dat" type="text" id="gender">
+                <i class="material-icons lock">lock</i>
               </div>
               <div class="flexbox-row--alignright margin-tb--13px">
                 <h3 class="margin-input input-label semibold">Height (m): </h3>
-                <input class="light-grey border--black regular--dat" type="text" id="height">
+                <input class="locked-grey border--black regular--dat" type="text" id="height">
+                <i class="material-icons lock">lock</i>
               </div>
               <div class="flexbox-row--alignright margin-tb--13px">
                 <h3 class="margin-input input-label semibold">Weight (kg): </h3>
-                <input class="light-grey border--black regular--dat" type="text" id="weight">
+                <input class="locked-grey border--black regular--dat" type="text" id="weight">
+                <i class="material-icons lock">lock</i>
               </div>
             </div>
             <div class="flexbox-column" style="width: 50%;">
               <h3 class="margin-tb--10px"><strong>Calculate Target Consumption</strong></h3>
               <div class="flexbox-row--alignright margin-tb--13px">
                 <h3 class="margin-input input-label semibold">Target BAC: </h3>
-                <input class="light-grey border--black regular--dat" type="text" id="targetBAC">
+                <input class="locked-grey border--black regular--dat" type="text" id="targetBAC">
+                <i class="material-icons lock">lock</i>
               </div>
               <div class="flexbox-row--alignright margin-tb--13px">
                 <h3 class="margin-input input-label semibold">Reach at: </h3>
-                <input class="light-grey border--black regular--dat" type="text" id="bacReachTime">
+                <input class="locked-grey border--black regular--dat" type="text" id="bacReachTime">
+                <i class="material-icons lock">lock</i>
               </div>
               <div class="flexbox-row--alignright margin-tb--13px">
-                <h3 class="margin-input input-label semibold">Measure in: </h3>
-                <input class="light-grey border--black regular--dat" type="text" id="measUnit">
+                <h3 class="margin-input input-label semibold">Recorded at: </h3>
+                <input class="locked-grey border--black regular--dat" type="text" id="timeRecorded">
+                <i class="material-icons lock">lock</i>
               </div>
-              <div class="flexbox-row--alignright margin-tb--13px" style="justify-content: flex-end;">
-                <button class="normal red white--text selectable" style="margin-right: 25px;" id="calculate">Calculate</button>
+              <div class="flexbox-row--alignright margin-tb--13px">
+                <h3 class="margin-input input-label semibold">Actual BAC: </h3>
+                <input class="locked-grey border--black regular--dat" type="text" id="bacActual">
+                <i class="material-icons lock">lock</i>
               </div>
             </div> 
           </div>
-          <div class="flexbox-column light-grey" style="height: 37%;">
+          <div class="flexbox-row light-grey" style="height: 37%;">
             <strong><h2 style="margin: 5px;">Results</h2></strong>
-            <!-- <button class="dark-grey white--text selectable" id="calculate">Administer</button> -->
-            <img src="img/bottle.png" alt="beer bottle" class="nav-item--push" style="align-self: flex-end; margin-bottom: 0; margin-right: 20px; z-index: -2;" width="209px" height="145px">
+            <img src="img/bottle.png" alt="beer bottle" class="nav-item--push" style="align-self: flex-end; margin-bottom: 0; margin-right: 20px;" width="209px" height="145px">
           </div>
         </div>
         <div class="modal">
@@ -119,8 +105,8 @@
                   <input class="light-grey border--black regular short" type="text" id="changeBevConc">
                 </div>
                 <div class="flexbox-row--alignright" style="margin-top: 20px; margin-left: 20px; width: 100%;">
-                  <button class="dark-grey white--text selectable" style="margin-right: 5px;">Save</button>
-                  <button class="dark-grey white--text selectable" style="margin-left: 5px;">Close</button>
+                  <button class="dark-grey white--text" style="margin-right: 5px;">Save</button>
+                  <button class="dark-grey white--text" style="margin-left: 5px;">Close</button>
                 </div>
               </div>
             </div>
