--- a/assets/login.html
+++ b/assets/login.html
@@ -7,20 +7,21 @@
     <!-- Vue -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   </head>
-  <body class="light-grey">
-    <div class="flexbox-column--align" style="min-height: 95vh;" id="login">
+  <body class="light-grey" id="login" ref="login">
+    <i class="material-icons selectable--text" style="position: absolute; right: 0px; padding: 5px; font-size: 32px;" v-on:click="winClose">close</i>
+    <div class="flexbox-column--align" style="min-height: 95vh;">
       <!-- Title & login labels -->
       <h1 class="h-centred" style="margin: 0%; margin-left: 4.5%;">Alcolator</h1>
       <h3 class="h-centred" style="margin-top: 0%; margin-left: 4.5%; margin-top: 0.5%;"><strong>Login</strong></h3>
       <!-- Username input -->
       <div class="flexbox-row--align margin-b--10px">
         <i class="material-icons margin-lr--10px default">account_circle</i>
-        <input class="light-grey border--black regular long" type="text" id="username" :value="username">
+        <input class="light-grey border--black regular long" type="text" id="username" ref="username">
       </div>
       <!-- Password input -->
       <div class="flexbox-row--align margin-tb--10px">
         <i class="material-icons margin-lr--10px default">lock</i>
-        <input class="light-grey border--black regular long" type="password" id="password">
+        <input class="light-grey border--black regular long" type="password" id="password" ref="password">
       </div>
       <!-- Login button -->
       <div class="flexbox-row margin-tb--10px" style="width: 37.5%; justify-content: flex-end;">
