--- a/assets/login.html
+++ b/assets/login.html
@@ -4,12 +4,12 @@
     <link rel="stylesheet" href="css/app.css">
     <!-- Material Design Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Vue -->
+    <!-- Vue.JS -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   </head>
-  <body class="light-grey" id="login" ref="login">
-    <i class="material-icons selectable--text" style="position: absolute; right: 0px; padding: 5px; font-size: 32px;" v-on:click="winClose">close</i>
-    <div class="flexbox-column--align" style="min-height: 95vh;">
+  <body class="light-grey" ref="login">
+    <i class="material-icons selectable--text" style="position: absolute; right: 0px; padding: 5px; font-size: 32px;" id="close" @click="winClose">close</i>
+    <div class="flexbox-column--align" style="min-height: 95vh;" id="vm">
       <!-- Title & login labels -->
       <h1 class="h-centred" style="margin: 0%; margin-left: 4.5%;">Alcolator</h1>
       <h3 class="h-centred" style="margin-top: 0%; margin-left: 4.5%; margin-top: 0.5%;"><strong>Login</strong></h3>
@@ -25,10 +25,10 @@
       </div>
       <!-- Login button -->
       <div class="flexbox-row margin-tb--10px" style="width: 37.5%; justify-content: flex-end;">
-        <button class="normal red white--text selectable">Login</button>
+        <button class="normal red white--text selectable" @click="login">Login</button>
       </div>
     </div>
-    <!-- Page script -->
+    <!-- Page Scripts -->   
     <script src="js/login.js"></script>
   </body>
 </html>
