--- a/assets/login.html
+++ b/assets/login.html
@@ -16,12 +16,12 @@
       <!-- Username input -->
       <div class="flexbox-row--align margin-b--10px">
         <i class="material-icons margin-lr--10px default">account_circle</i>
-        <input class="light-grey border--black regular long" type="text" id="username" ref="username">
+        <input class="light-grey border--black regular long" type="text" id="username" v-model="username">
       </div>
       <!-- Password input -->
       <div class="flexbox-row--align margin-tb--10px">
         <i class="material-icons margin-lr--10px default">lock</i>
-        <input class="light-grey border--black regular long" type="password" id="password" ref="password">
+        <input class="light-grey border--black regular long" type="password" id="password" v-model="password">
       </div>
       <!-- Login button -->
       <div class="flexbox-row margin-tb--10px" style="width: 37.5%; justify-content: flex-end;">
