--- a/assets/main.html
+++ b/assets/main.html
@@ -20,8 +20,8 @@
       </div>
       <div class="flexbox-row">
         <div class="flexbox-column--list light-grey">
-          <div class="flexbox-row--align" style="padding: 0;">
-            <strong><h2>Records</h2></strong>
+          <div class="flexbox-row--align">
+            <strong><h2 style="margin: 10px;">Records</h2></strong>
           </div>   
           <div class="vertical-scroll">
             <record
@@ -35,7 +35,7 @@
         <div class="flexbox-column--dat pad--10px">
           <template v-if="isNewStart">
             <h3 style="margin-top: 15px; margin-left: 15px; margin-bottom: 0;">Please select an operation.</h3>
-            <div class="flexbox-row pad--10px" style="height: 58.5%;"></div>
+            <div class="flexbox-row pad--10px" style="height: 63%;"></div>
           </template>
           <template v-else>
             <template v-if="isViewingSubject">
